Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121455

QtMultimedia module fails Yocto CI build

XMLWordPrintable

    • Linux/Yocto
    • b0cffad44 (dev), ead22a2ad (6.7), 6adf1b3e4 (6.6.2), 47453f8f8 (6.6), e74f27fea (tqtc/lts-6.5)

      With latest submodule update the multimedia module fails to build in Yocto CI builds for meta-qt6 layer :

      agent:2024/01/23 09:33:45 build.go:404: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtmultimedia/6.5.5-r0/git/src/plugins/multimedia/ffmpeg/qffmpeg.cpp:483:25: error: invalid conversion from 'const AVChannelLayout*' to 'AVChannelLayout*' [-fpermissive]
      agent:2024/01/23 09:33:45 build.go:404: |   483 |                         &outputFormat.channelLayout,
      agent:2024/01/23 09:33:45 build.go:404: |       |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2024/01/23 09:33:45 build.go:404: |       |                         |
      agent:2024/01/23 09:33:45 build.go:404: |       |                         const AVChannelLayout*
      agent:2024/01/23 09:33:45 build.go:404: | In file included from /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtmultimedia/6.5.5-r0/git/src/plugins/multimedia/ffmpeg/qffmpeg_p.h:13,
      agent:2024/01/23 09:33:45 build.go:404: |                  from /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtmultimedia/6.5.5-r0/git/src/plugins/multimedia/ffmpeg/qffmpeg.cpp:4:
      agent:2024/01/23 09:33:45 build.go:404: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtmultimedia/6.5.5-r0/recipe-sysroot/usr/include/libswresample/swresample.h:289:42: note:   initializing argument 2 of 'int swr_alloc_set_opts2(SwrContext**, AVChannelLayout*, AVSampleFormat, int, AVChannelLayout*, AVSampleFormat, int, int, void*)'
      agent:2024/01/23 09:33:45 build.go:404: |   289 |                         AVChannelLayout *out_ch_layout, enum AVSampleFormat out_sample_fmt, int out_sample_rate,
      agent:2024/01/23 09:33:45 build.go:404: |       |                         ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
      agent:2024/01/23 09:33:45 build.go:404: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtmultimedia/6.5.5-r0/git/src/plugins/multimedia/ffmpeg/qffmpeg.cpp:486:25: error: invalid conversion from 'const AVChannelLayout*' to 'AVChannelLayout*' [-fpermissive]
      agent:2024/01/23 09:33:45 build.go:404: |   486 |                         &inputFormat.channelLayout,
      agent:2024/01/23 09:33:45 build.go:404: |       |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2024/01/23 09:33:45 build.go:404: |       |                         |
      agent:2024/01/23 09:33:45 build.go:404: |       |                         const AVChannelLayout*
      agent:2024/01/23 09:33:45 build.go:404: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtmultimedia/6.5.5-r0/recipe-sysroot/usr/include/libswresample/swresample.h:290:42: note:   initializing argument 5 of 'int swr_alloc_set_opts2(SwrContext**, AVChannelLayout*, AVSampleFormat, int, AVChannelLayout*, AVSampleFormat, int, int, void*)'
      agent:2024/01/23 09:33:45 build.go:404: |   290 |                         AVChannelLayout *in_ch_layout, enum AVSampleFormat  in_sample_fmt, int  in_sample_rate,
      agent:2024/01/23 09:33:45 build.go:404: |       |                         ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~

      Points to code added in multimedia commit c2f4dae915b8d341a316739a12c0be81abfb836d  "Move creation of ffmpeg audio resampler to utils"

       One failing integration: https://codereview.qt-project.org/c/yocto/meta-qt6/+/533382

      Full log attached log.txt.gz

        1. log.txt.gz
          176 kB
          Mikko Gronoff
        For Gerrit Dashboard: QTBUG-121455
        # Subject Branch Project Status CR V

            artemiy Artem Dyomin
            gronoff Mikko Gronoff
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes