Fix build with ffmpeg swrresample version < 4.9.100

swr_alloc_set_opts2 takes 'const AVChannelLayout*' from
LIBSWRESAMPLE_VERSION 4.9.100

Fixes: QTBUG-121455
Pick-to: 6.7 6.6 6.5
Change-Id: I06812f9efedd53e12152fb3cf1574ad8c7c61d27
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>